--- a/server/Entities/Entities.csproj
+++ b/server/Entities/Entities.csproj
@@ -16,6 +16,10 @@
     <Compile Remove="Migrations\20201003141506_InitAndSeed.Designer.cs" />
     <Compile Remove="Migrations\20201003141931_InitAndSeed.cs" />
     <Compile Remove="Migrations\20201003141931_InitAndSeed.Designer.cs" />
+    <Compile Remove="Migrations\20201006163834_addBookReadersModelAndSeed.cs" />
+    <Compile Remove="Migrations\20201006163834_addBookReadersModelAndSeed.Designer.cs" />
+    <Compile Remove="Migrations\20201006164220_addBookReadersModelAndSeed.cs" />
+    <Compile Remove="Migrations\20201006164220_addBookReadersModelAndSeed.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
