--- a/server/Entities/Entities.csproj
+++ b/server/Entities/Entities.csproj
@@ -20,6 +20,10 @@
     <Compile Remove="Migrations\20201006163834_addBookReadersModelAndSeed.Designer.cs" />
     <Compile Remove="Migrations\20201006164220_addBookReadersModelAndSeed.cs" />
     <Compile Remove="Migrations\20201006164220_addBookReadersModelAndSeed.Designer.cs" />
+    <Compile Remove="Migrations\20201007083804_updateBookModel.cs" />
+    <Compile Remove="Migrations\20201007083804_updateBookModel.Designer.cs" />
+    <Compile Remove="Migrations\20201007101032_updateBookAndUserModel.cs" />
+    <Compile Remove="Migrations\20201007101032_updateBookAndUserModel.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
